[tool.poetry]
name = "sample-agent"
version = "0.1.0"
description = "PydanticAI Research Assistant"
authors = ["author"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.45.0"
pydantic-ai = "^0.2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"